--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,13 @@
           "functionId": "processFile",
           "region": "us-central1"
         }
+      },
+      {
+        "source": "/api/signed-url",
+        "function": {
+          "functionId": "signedUrl",
+          "region": "us-central1"
+        }
       }
     ]
   }
